services/aredn-scanner/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: aredn-scanner
  namespace: aredn-scanner
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: aredn-scanner
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: rdio-scanner
            app.kubernetes.io/instance: rdio-scanner
